SERVER-130475: OTel file metric exporter writes an unbounded metrics.json, breaking shell cat() (16 MB limit) and failing otel_metrics.js (#57496)

GitOrigin-RevId: 605889131d144d42be3b3f6bfbaa3dcbda9080a9