src/mongo/otel/metrics/metrics_initialization.h
@@ -33,7 +33,9 @@
 #include "mongo/config.h"
 #include "mongo/util/modules.h"
 
+#include <cstddef>
 #include <string>
+#include <string_view>
 
 namespace mongo::otel::metrics {
 /**
@@ -48,4 +50,26 @@ MONGO_MOD_PUBLIC Status initialize();
  * NoopMeterProvider. This is not thread-safe.
  */
 MONGO_MOD_PUBLIC void shutdown();
+
+namespace metrics_initialization_detail {
+/**
+ * The file name pattern and per-file size cap used to configure the OTLP file metric exporter.
+ */
+struct OtelMetricsFileExporterConfig {
+    std::string filePattern;
+    std::size_t fileSize;
+};
+
+/**
+ * Builds the file name pattern and per-file size cap for the OTLP file metric exporter. Exposed for
+ * testing.
+ *
+ * The pattern embeds a rotation index (%N) so the exporter's built-in size-based rotation produces
+ * distinct files instead of appending to a single file that grows without bound, and `fileSize` is
+ * kept below the mongo shell's cat() 16MB limit so the resulting files stay readable by shell-based
+ * tooling (see jstests otel_file_export_helpers.js).
+ */
+OtelMetricsFileExporterConfig makeMetricsFileExporterConfig(std::string_view directory,
+                                                            std::string_view pid);
+}  // namespace metrics_initialization_detail
 }  // namespace mongo::otel::metrics
